BUG2768 [P] Tags line wraps incorrectly

--- a/src/client/src/ui/ProductOverview/styles.scss
+++ b/src/client/src/ui/ProductOverview/styles.scss
@@ -541,6 +541,8 @@
           border-top: 1px solid #e5e5e5;
         }
         &-tags {
+          display: flex;
+          flex-wrap: wrap;
           font-size: 15px;
           color: $product-overview-main-color;
           font-family: $poppins;
